--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -5125,6 +5125,7 @@ tags:
   - name: Contact
   - name: Contact Message
   - name: Contact Note
+  - name: Contact Portfolio
   - name: Course
   - name: Course Instance
   - name: Course Instance Attendance
@@ -7228,6 +7229,93 @@ components:
           type: string
           description: "Date when the fragment was applied."
           example: "2024-11-27 14:13"
+    PortfolioItem:
+      type: object
+      properties:
+        PORTFOLIOID:
+          type: integer
+          format: int64
+          description: Unique ID of the portfolio item
+        CONTACTID:
+          type: integer
+          format: int64
+          description: ID of the related contact
+        PORTFOLIOTYPEID:
+          type: integer
+          format: int64
+          description: ID of the portfolio type
+        PORTFOLIOTYPE:
+          type: string
+          description: General category of the portfolio item (e.g., Licence, Qualification)
+        PORTFOLIOTYPENAME:
+          type: string
+          description: Specific name of the portfolio type
+        NUMBER:
+          type: string
+          nullable: true
+          description: Document or licence number (if applicable)
+        FILES:
+          type: array
+          items:
+            type: object
+            properties:
+              FILENAME:
+                type: string
+              FOLDER:
+                type: string
+              ACCESSMIN:
+                type: integer
+                format: int32
+              PORTFOLIODOCID:
+                type: integer
+                format: int64
+              TEMPORARYACCESSURL:
+                type: string
+                format: uri
+          description: List of files attached to the portfolio item
+        DATEEXPIRES:
+          type: string
+          format: date
+          nullable: true
+          description: Expiry date, if applicable
+        ISSUEDBY:
+          type: string
+          nullable: true
+          description: Issuing organisation
+        DATEISSUED:
+          type: string
+          format: date
+          nullable: true
+          description: Date the item was issued
+        DETAILS:
+          type: string
+          nullable: true
+          description: Additional information or notes
+        STARTDATE:
+          type: string
+          format: date
+          nullable: true
+          description: Start date (if applicable)
+        SPECIALTY:
+          type: string
+          nullable: true
+          description: Area of specialty (if applicable)
+        NAME:
+          type: string
+          nullable: true
+          description: Name of the portfolio item
+        CUSTOMFIELD_MYFIRSTFIELD:
+          type: string
+          description: Custom field containing the first field's information.
+          example: "This is my first field"
+        CUSTOMFIELD_MYMULTISELECT:
+          type: array
+          items:
+            type: string
+          description: Multiselect custom field with multiple options.
+          example: ["A", "B"]
+      required:
+        - CONTACTID
     Trainer:
       type: object
       properties:
