AX-23471 - document Contact Portfolio GET endpoint

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1451,6 +1451,66 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ContactMessage'
+  /contact/portfolio:
+    get:
+      tags:
+        - Contact Portfolio
+      summary: Retrieve a contact's portfolio
+      description: Retrieve documents and data stored in a contact's portfolio
+      operationId: retrieveAContactSPortfolio
+      parameters:
+        - name: contactId
+          required: true
+          in: query
+          description: The ID of the contact to retrieve the portfolio for.
+          schema:
+            type: integer
+            example: 6531423
+        - name: portfolioId
+          in: query
+          description: The ID of the portfolio item to retrieve.
+          schema:
+            type: integer
+            example: 123456
+        - name: portfolioTypeId
+          in: query
+          description: The ID of the client defined Portfolio Type. These IDs can be found by checking Portfolio Types endpoint.
+          schema:
+            type: integer
+            example: 789
+        - name: portfolioChecklistID
+          in: query
+          description: |
+            If provided, portfolio objects will be returned which match those in the checklist.
+
+            Missing items will be returned as placeholders with `PORTFOLIOID` = `0`. These can be found by checking endpoint Portfolio Checkslists endpoint.
+          schema:
+            type: integer
+            example: 456
+        - name: isCRICOS
+          in: query
+          description: |
+            If provided, will return the documents against the defined CRICOS checklist. The output is the same as passing a `portfolioChecklistId`.
+
+            This feature must be enabled and the checklist must defined in the client's System Settings or an error will be thrown.
+          schema:
+            type: boolean
+            default: false
+            example: false
+      responses:
+        '200':
+          description: |
+            Where the request contains a portfolioId, a single PortfolioItem object will be returned.
+
+            Where the request does not contain a portfolioId, an array of PortfolioItem objects will be returned.
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/PortfolioItem'
+                  - type: array
+                    items:
+                      $ref: '#/components/schemas/PortfolioItem'
   /course:
     post:
       tags:
