AX-23471 - update description of Contact Portfolio Item POST

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -1590,7 +1590,7 @@ paths:
     post:
       tags:
         - Contact Portfolio
-      summary: Create a portfolio item for a Contact.
+      summary: Create a contact portfolio item
       description: Create document or data in a contact's portfolio
       operationId: createContactPortfolioItem
       requestBody:
